# PS1Dev

./: .gitignore  CMakeLists.txt  CppProperties.json  Makefile.mak  README.md  build.bat  build.ps1  buildall.bat  config.h  cube.cpp  cube.h  debug.c  main.c  main.cpp  ps1-exe.ld
cdrom/: PS1DEV.CTI  build.bat
cmake/: psyq.cmake
system/crt0/: crt0.s  startup.c
textures/: Test_64x64.s  Test_64x64.tim
